--- a/misc/fastio.html
+++ b/misc/fastio.html
@@ -77,7 +77,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/intro.html"><strong aria-hidden="true">7.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../numerical/linrec/berlekamp.html"><strong aria-hidden="true">7.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/kitamasa.html"><strong aria-hidden="true">7.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/bostanmori.html"><strong aria-hidden="true">7.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/matrix.html"><strong aria-hidden="true">8.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">9.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">10.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">10.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">10.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">10.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/adjlist.html"><strong aria-hidden="true">11.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">12.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">13.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">14.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">15.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">16.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">17.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">18.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">19.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">20.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">21.</strong> Mo's</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/psbase.html" class="active"><strong aria-hidden="true">22.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">23.</strong> Zero/One Trait</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">24.</strong> Macros</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/intro.html"><strong aria-hidden="true">7.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../numerical/linrec/berlekamp.html"><strong aria-hidden="true">7.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/kitamasa.html"><strong aria-hidden="true">7.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../numerical/linrec/bostanmori.html"><strong aria-hidden="true">7.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../datastructure/matrix.html"><strong aria-hidden="true">8.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="../datastructure/bitarray.html"><strong aria-hidden="true">9.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/intro.html"><strong aria-hidden="true">10.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../datastructure/segtree/segtree.html"><strong aria-hidden="true">10.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/fenwick.html"><strong aria-hidden="true">10.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">10.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../graphs/adjlist.html"><strong aria-hidden="true">11.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="../graphs/dsu.html"><strong aria-hidden="true">12.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../graphs/scc.html"><strong aria-hidden="true">13.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../graphs/2sat.html"><strong aria-hidden="true">14.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="../strings/kmp.html"><strong aria-hidden="true">15.</strong> KMP</a></li><li class="chapter-item expanded "><a href="../strings/manacher.html"><strong aria-hidden="true">16.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="../strings/salcp.html"><strong aria-hidden="true">17.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../geometry/convexhull.html"><strong aria-hidden="true">18.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../unclass/valcomp.html"><strong aria-hidden="true">19.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../unclass/lis.html"><strong aria-hidden="true">20.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="../unclass/mos.html"><strong aria-hidden="true">21.</strong> Mo's</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../misc/fastio.html" class="active"><strong aria-hidden="true">22.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../misc/macro.html"><strong aria-hidden="true">23.</strong> Macros</a></li><li class="chapter-item expanded "><a href="../misc/zero_one_trait.html"><strong aria-hidden="true">24.</strong> Zero/One Trait (Deprecated)</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -139,24 +139,44 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="base-template"><a class="header" href="#base-template">Base Template</a></h1>
+                        <h1 id="fast-io"><a class="header" href="#fast-io">Fast IO</a></h1>
 <h2 id="normal"><a class="header" href="#normal">Normal</a></h2>
+<p><code>get_input()</code> returns every text read from the standard input, using <code>mmap</code>. Because of this, the input must be read by file redirection as <code>cargo run --release &lt; input.txt</code>. THIS FUNCTION DOESN'T WORK ON WINDOWS. THE FUNCTION MUST BE REWRITTEN MANUALLY TO BE USED FOR <u><strong>CODEFORCES</strong></u>, WHICH RUNS CODES ON WINDOWS.</p>
+<p><code>Scanner</code> is a structure which can read either lines or tokens out of a string. <code>Scanner::tokenize(str)</code> tokenizes <code>str</code> by whitespaces, such as <code> </code> spaces, <code>\t</code> tabs, and <code>\n</code> newlines.</p>
+<p><code>sc</code> in <code>main()</code> function is a scanner instance, which splits <code>input_str</code> by whitespaces. <code>sc.next_str()</code> returns the next token as <code>&amp;str</code>. If the input has been exhausted, the program panics. <code>sc.next::&lt;T&gt;()</code> reads the next token, parses it into a type <code>T</code>, and returns it. If the input has been exhausted or the parse fails, the program panics.</p>
+<p>Both function has its &quot;Option&quot; equivalents. <code>sc.next_str_option()</code> returns the next token as <code>Some(&amp;str)</code>. This function returns <code>None</code> instead of panicing the whole program, compared to <code>sc.next_str()</code>. <code>sc.next_option()</code> works just like <code>sc.next()</code> except that it returns <code>Option&lt;T&gt;</code> so that the function returns <code>None</code> instead of panicing. These functions are useful when the code needs to detect <code>EOF</code>.</p>
+<p><code>next!</code> macros are for easy-typing for inputs. <code>next!()</code> is equivalent to <code>sc.next()</code>. You can specify the return type of it by using <code>next!(T)</code>. Multiple types can also be used as arguments, delimited by spaces: <code>next!(T U V)</code> returns a tuple <code>(T, U, V)</code>. Lastly, <code>next!(str)</code> is equivalent to <code>sc.next_str()</code>.</p>
+<p><code>out!</code> and <code>outln!</code> are just the same with <code>print!</code> and <code>println!</code>, but the stdout flush is buffered for faster output.</p>
+<h3 id="example"><a class="header" href="#example">Example</a></h3>
+<pre><code class="language-rust noplayground">// Main
+let n: usize = next!();
+let m = next!(usize);
+let (a, b) = next!(u32 i64);
+let arr: Vec&lt;u64&gt; = (0..n).map(|_| next!()).collect();
+
+let word = next!(str);
+
+out!(&quot;{} &quot;, a);
+outln!(&quot;{}&quot;, b);
+outln!(&quot;{:?}&quot;, [n, m]);
+</code></pre>
+<h3 id="code"><a class="header" href="#code">Code</a></h3>
 <pre><code class="language-rust noplayground">fn main() {
     // FastIO
     use {fastio::*, std::io::*};
-    let input_str: &amp;str = get_input();
-    let mut scan: Scanner&lt;_&gt; = Scanner::tokenize(input_str);
+    let input_str = get_input();
+    let mut sc: Scanner&lt;_&gt; = Scanner::tokenize(input_str);
     let stdout = stdout();
-    let out = &amp;mut BufWriter::new(stdout.lock());
+    let wr = &amp;mut BufWriter::new(stdout.lock());
 
     // FastIO Macros
     macro_rules! next {
-        () =&gt; { scan.next() };
-        (str) =&gt; { scan.next_str() };
-        ($($t:ty) +) =&gt; { ($(scan.next::&lt;$t&gt;()),+) };
+        () =&gt; { sc.next() };
+        (str) =&gt; { sc.next_str() };
+        ($($t:ty) +) =&gt; { ($(sc.next::&lt;$t&gt;()),+) };
     }
-    macro_rules! out { ($($arg:tt)*) =&gt; { write!(out, $($arg)*).ok(); }; }
-    macro_rules! outln { ($($arg:tt)*) =&gt; { writeln!(out, $($arg)*).ok(); }; }
+    macro_rules! out { ($($arg:tt)*) =&gt; { write!(wr, $($arg)*).ok(); }; }
+    macro_rules! outln { ($($arg:tt)*) =&gt; { writeln!(wr, $($arg)*).ok(); }; }
 
     // Main
 }
@@ -212,24 +232,94 @@ mod fastio {
     }
 }
 </code></pre>
+<h3 id="template-for-windowscodeforces"><a class="header" href="#template-for-windowscodeforces">Template for Windows(Codeforces)</a></h3>
+<pre><code class="language-rust noplayground">fn main() {
+    // FastIO
+    use {fastio::*, std::io::*};
+    let input_str = get_input();
+    let mut sc: Scanner&lt;_&gt; = Scanner::tokenize(&amp;input_str);
+    let stdout = stdout();
+    let wr = &amp;mut BufWriter::new(stdout.lock());
+
+    // FastIO Macros
+    macro_rules! next {
+        () =&gt; { sc.next() };
+        (str) =&gt; { sc.next_str() };
+        ($($t:ty) +) =&gt; { ($(sc.next::&lt;$t&gt;()),+) };
+    }
+    macro_rules! out { ($($arg:tt)*) =&gt; { write!(wr, $($arg)*).ok(); }; }
+    macro_rules! outln { ($($arg:tt)*) =&gt; { writeln!(wr, $($arg)*).ok(); }; }
+
+    // Main
+}
+
+mod fastio {
+    use std::io::{stdin, Read};
+
+    pub fn get_input() -&gt; String {
+        let mut buf = String::new();
+        stdin().read_to_string(&amp;mut buf).unwrap();
+        buf
+    }
+
+    pub struct Scanner&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; {
+        it: I,
+    }
+
+    impl&lt;'a&gt; Scanner&lt;'a, std::str::SplitAsciiWhitespace&lt;'a&gt;&gt; {
+        pub fn tokenize(s: &amp;'a str) -&gt; Self {
+            Self {
+                it: s.split_ascii_whitespace(),
+            }
+        }
+    }
+
+    impl&lt;'a&gt; Scanner&lt;'a, std::str::Lines&lt;'a&gt;&gt; {
+        pub fn lines(s: &amp;'a str) -&gt; Self {
+            Self { it: s.lines() }
+        }
+    }
+
+    impl&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; Scanner&lt;'a, I&gt; {
+        #[inline(always)]
+        pub fn next&lt;T: std::str::FromStr&gt;(&amp;mut self) -&gt; T {
+            self.it.next().unwrap().parse().ok().unwrap()
+        }
+        #[inline(always)]
+        pub fn next_str(&amp;mut self) -&gt; &amp;'a str {
+            self.it.next().unwrap()
+        }
+        #[inline(always)]
+        pub fn next_option&lt;T: std::str::FromStr&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
+            self.it.next().and_then(|s| s.parse().ok())
+        }
+        #[inline(always)]
+        pub fn next_str_option(&amp;mut self) -&gt; Option&lt;&amp;'a str&gt; {
+            self.it.next()
+        }
+    }
+}
+</code></pre>
 <h2 id="with-faster-print"><a class="header" href="#with-faster-print">With faster print</a></h2>
 <pre><code class="language-rust noplayground">fn main() {
     // FastIO
     use fastio::*;
-    let input_str: &amp;str = get_input();
-    let mut scan: Scanner&lt;_&gt; = Scanner::tokenize(input_str);
+    let input_str = get_input();
+    let mut sc: Scanner&lt;_&gt; = Scanner::tokenize(input_str);
     let mut out = Flusher::with_capacity(1 &lt;&lt; 18);
 
     // FastIO Macros
     macro_rules! next {
-        () =&gt; { scan.next() };
-        (str) =&gt; { scan.next_str() };
-        ($($t:ty) +) =&gt; { ($(scan.next::&lt;$t&gt;()),+) };
+        () =&gt; { sc.next() };
+        (str) =&gt; { sc.next_str() };
+        ($($t:ty) +) =&gt; { ($(sc.next::&lt;$t&gt;()),+) };
     }
     macro_rules! out { ($($arg:tt),*) =&gt; {$( $arg.push_num(&amp;mut out); out.buf.push(b' '); )*}; }
     macro_rules! outln { ($($arg:tt),*) =&gt; { out!($($arg),*); out.buf.push(b'\n'); } }
 
     // Main
+    let n: usize = next!();
+    outln!(n);
 }
 
 mod fastio {
@@ -340,6 +430,7 @@ mod fastio {
 
     impl_pushprint!(i8;u8 i16;u16 i32;u32 i64;u64 i128;u128 isize;usize);
 }
+
 </code></pre>
 
                     </main>
@@ -349,7 +440,7 @@ mod fastio {
                             <a rel="prev" href="../unclass/mos.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../misc/zero_one_trait.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../misc/macro.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -361,7 +452,7 @@ mod fastio {
                     <a rel="prev" href="../unclass/mos.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../misc/zero_one_trait.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../misc/macro.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
